[package]
name = "netlib-src"
version = "0.4.1"
license = "Apache-2.0/MIT"
authors = [
  "Corey Richardson <corey@octayn.net>",
  "Ivan Ukhov <ivan.ukhov@gmail.com>",
]
description = "The package provides BLAS and LAPACK using the Netlib implementation."
homepage = "https://github.com/cmr/netlib-src"
repository = "https://github.com/cmr/netlib-src"
build = "build.rs"
links = "blas"
exclude = [
  "source/TESTING/*",
  "source/BLAS/TESTING/*",
  "source/CBLAS/testing/*",
]

[features]
default = ["cblas", "lapacke"]

cblas = []
lapacke = []
static = []
system = []

[build-dependencies]
cmake = "0.1"
