[package]
name = "netlib-src"
version = "0.7.0"
license = "Apache-2.0/MIT"
authors = [
    "Corey Richardson <corey@octayn.net>",
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
    "Mason Smith <masonium@gmail.com>",
]
description = "The package provides BLAS and LAPACK using the Netlib implementation."
homepage = "https://github.com/cmr/netlib-src"
repository = "https://github.com/cmr/netlib-src"
readme = "README.md"
categories = ["science"]
keywords = ["linear-algebra"]
build = "build.rs"
links = "blas"
exclude = [
    "source/BLAS/TESTING/*",
    "source/CBLAS/testing/*",
    "source/TESTING/*.in",
    "source/TESTING/EIG/*",
    "source/TESTING/LIN/*",
]

[features]
default = ["cblas", "lapacke"]

cblas = []
lapacke = []
static = []
system = []

[build-dependencies]
cmake = "0.1"
