[package]
name = "netlib-src"
version = "0.8.0"
license = "Apache-2.0/MIT"
authors = [
    "Alexander Bulaev <alexbool@yandex-team.ru>",
    "Corey Richardson <corey@octayn.net>",
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
    "Mason Smith <masonium@gmail.com>",
    "Phil Ruffwind <rf@rufflewind.com>",
]
description = "The package provides a source of BLAS and LAPACK via Netlib."
homepage = "https://github.com/blas-lapack-rs/netlib-src"
repository = "https://github.com/blas-lapack-rs/netlib-src"
readme = "README.md"
categories = ["science"]
keywords = ["linear-algebra"]
build = "build.rs"
links = "blas"
exclude = [
    "source/BLAS/TESTING/*",
    "source/CBLAS/testing/*",
    "source/TESTING/*.in",
    "source/TESTING/EIG/*",
    "source/TESTING/LIN/*",
]

[features]
default = ["cblas", "lapacke", "tmg"]

cblas = []
lapacke = []
static = []
system = []
tmg = []

[build-dependencies]
cmake = "0.1"

[dev-dependencies]
libc = "0.2"
